--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-file-base64": "^1.0.3",
     "react-kakao-login": "^2.1.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
